# photo

./: .coverage  .env.test  .gitignore  .pylintrc  Dockerfile  Dockerfile.dev  README.md  alert_rules.yml  configure_onedrive.sh  database_implementation.md  docker-compose.dev.yml  docker-compose.yml  photo_management_roadmap.md  photo_system_guide.md  prometheus.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: hardware_info.md  maintenance.md  rclone_config.md  rclone_setup.md  work_in_progress.md
photo_app/: README.md  alembic.ini  pyproject.toml
photo_app/alembic/: env.py
photo_app/alembic/versions/: 2024_11_24_1602-b78ecb1c8fb5_standardize_table_names.py
photo_app/api/: main.py
photo_app/core/: config.py
photo_app/core/dao/: base.py  metadata.py  photo.py
photo_app/core/models/: album.py  base.py  photo.py  tag.py  user.py
photo_app/infrastructure/database/: base.py
photo_app/tests/: conftest.py  test_database.py  test_models.py
photo_app/tests/test_dao/: test_metadata.py  test_photo.py
