[tool.poetry]
name = "photo-app"
version = "0.1.0"
description = "Intelligent Photo Management System"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "photo_app" }
]

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.0"
aiosqlite = "^0.19.0"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
alembic = "^1.13.1"
pydantic = "^2.6.3"
pydantic-settings = "^2.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = [
    "."
]
